# devpair

./: .pre-commit-config.yaml  MIT.md  Makefile  README.md  devpair.rb  localdevpair.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: push.yml  release.yml
app/: cli.py  logger.py  main.py  manager.py  test_manager.py  timer.py
scripts/: tag-new-version.bash
tests/: conftest.py  test_cli.py  test_logger.py  test_manager.py  test_timer.py
