[tool.poetry]
name = "devpair"
version = "1.1.1"
description = "Pair script that manage a pair programming session using git."
authors = ["raphael.kieling <raphael.kieling@telus.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
loguru = "^0.6.0"
GitPython = "^3.1.29"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
